--- a/style.css
+++ b/style.css
@@ -3,14 +3,23 @@ body{
     margin: 0;
     
 }
+.Stay-Focused{
+    border-left: 3px solid;
+   border-color: firebrick;
+   padding-left: 2%;
+  
+}
 h1{
-    font-size: 40px;
+    font-size: 60px;
+   
 }
 h2{
-    font-size: 30px;
+    
+    font-size: 50px;
 }
-.orange-color{
-    color: orange;
+.color{
+    
+    color: rgb(16, 221, 142);
 }
 section{
     display: flex;
@@ -18,9 +27,21 @@ section{
 }
 .half-width{
     width: 50%;
-    padding-left: 2%;
+    padding-left: 5%; 
     
-
 }
+.half-width p{
+    padding-left: 2%;
+}
+
 .half-width img{
-  width: 80%;
+  width: 70%;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(orange, tomato);
+    color: white;
+    font-weight: 700;
+    padding: 10px 40px;
+    border-radius: 5px;
+   margin-left: 2%;
