--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
-    margin: 0;
+
     
 }
 .Stay-Focused{
@@ -17,14 +17,23 @@ h2{
     
     font-size: 50px;
 }
+
+.why-am{
+    font-size: 18px;
+    font-weight: normal;
+    color: gray;
+    padding-left: 2%;
+}
+
 .color{
     
     color: rgb(16, 221, 142);
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 150px;
 }
+
 .half-width{
     width: 50%;
     padding-left: 5%; 
@@ -32,6 +41,7 @@ section{
 }
 .half-width p{
     padding-left: 2%;
+    color: grey;
 }
 
 .half-width img{
@@ -39,9 +49,113 @@ section{
 }
 .link-button{
     text-decoration: none;
-    background-image: linear-gradient(orange, tomato);
+   background-color: teal;
     color: white;
     font-weight: 700;
-    padding: 10px 40px;
-    border-radius: 5px;
+    padding: 10px 50px;
    margin-left: 2%;
+}
+
+.My{
+   text-align: center; 
+   font-size: 40px;
+}
+span{
+    color: rgb(16, 221, 142);
+}
+
+
+#Mission-item{
+    border:5px solid;
+ 
+    padding-left:2%;
+    margin-left: 8%;
+    margin-right: 5%;
+     border-image-slice: 1; 
+     border-radius: 20px 20px 20px;
+      
+     
+}
+
+#item-vission{
+    border: 5px solid;
+    padding-left: 2%;
+    margin-right:  10%;
+   
+    
+    border-image-slice: 1;
+    border-radius: 20px 20px 20px;
+}
+
+
+#item-Goals{
+    border:5px solid;
+    margin-right: 10%;
+    padding-left: 2%;
+   
+     border-image-slice: 1; 
+     border-radius: 20px 20px 20px;
+} 
+
+
+.second-width img{
+    width: 80%;
+    padding-left: 10%;
+}
+
+.second-width {
+width: 70%
+
+}
+.Develop{
+    font-size:50px ;
+
+}
+.dolor{
+    font-size: 25px;
+    font-weight: normal;
+margin-left: 2%;
+}
+.button{
+    text-decoration: none;
+   background-color: teal;
+    color: white;
+    font-size: 20px;
+   font-weight: normal;
+   padding: 10px 50px;
+   
+}
+
+.third-width{
+    width: 50%;
+    padding-left: 5%;
+}
+.third-width img{
+    
+        width: 70%;
+      
+}
+.link-button-third{
+    text-decoration: none;
+     background-color :teal;
+    color: white;
+    font-weight: 700;
+    padding: 10px 50px;
+   margin-left: 2%;
+   border-radius: 10px;
+
+}
+
+footer{
+    background-color: black;
+    height: 100px;
+    padding-top: 50px;
+    color: white;
+
+}
+.footer-and{
+    
+    text-align: center;
+    justify-content: center;
+}
+
