--- a/style.css
+++ b/style.css
@@ -145,6 +145,46 @@ margin-left: 2%;
    border-radius: 10px;
 
 }
+.contact-box{
+    width: 500px;
+    background-color: ;   
+    box-shadow: 5px 5px 20px white;
+    left: 100%;
+    top: 100%;
+    padding-left: 40%;
+    background-color: linear-gradient(tomato);
+    
+
+}
+.btn-btn{
+    border-radius: 20px;
+    color: black;
+    margin-top:18px ;
+    padding: 10px;
+    background-color: white;
+    font-size: 12px;
+    
+    cursor: pointer;
+}
+
+form{
+    margin: 35px;
+}
+.input-field{
+    width:400px;
+    height: 40px;
+    margin-top: 20px;
+    padding-left: 10px;
+    border: 1px solid #999;
+    padding-right: 10px;
+    border-radius: 14px;
+    outline: none;
+}
+.fieldtextarea-field{
+    height: 150px;
+    padding-top: 10px;
+}
+
 
 footer{
     background-color: black;
